2000-12-13  Miles Bader  <miles@gnu.org>

	* smiley-ems.el (smiley-region): Bind `inhibit-point-motion-hooks'
	to t, so that we don't get stuck while trying to smilefy
	intangible text.

2000-12-12  Gerd Moellmann  <gerd@gnu.org>

	* smiley-ems.el (smiley-regexp-alist): Make regexps match
	at the end of the buffer.
	(smiley-region): In the loop, move to the end of the submatch
	matching the smiley instead of using the end of the match 
	of the whole regexp.

2000-12-12  Eli Zaretskii  <eliz@is.elta.co.il>

	* message.el (message-mode): Doc fix.

2000-12-12  Gerd Moellmann  <gerd@gnu.org>

	* smiley-ems.el (smiley-region): Doc fix.
	
2000-12-11  Miles Bader  <miles@gnu.org>

	* gnus-sum.el (gnus-summary-recenter): When trying to keep the
	bottom line visible, check to see if it's partially obscured, and
	if so, either scroll one more line to make it fully visible, or
	revert to showing the second line from the top.

2000-12-07  Dave Love  <fx@gnu.org>

	* mailcap.el (mailcap-download-directory)
	* gnus-audio.el (gnus-audio-directory)
	* smiley-ems.el (smiley-data-directory): Fix :type.

2000-12-05  Dave Love  <fx@gnu.org>

	* starttls.el: New file.

2000-12-04  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-msg.el (gnus-msg-mail): COMPOSEFUNC should return t if it
	succeeds.
	(gnus-setup-message): Remove a hack.

	* gnus-win.el (gnus-configure-windows): Make sure
	nntp-server-buffer is live.
	(gnus-remove-some-windows): switch-to-buffer -> set-buffer.
	(gnus-configure-frame): Save selected window.

2000-12-04  Andreas Jaeger  <aj@suse.de>

	* gnus-msg.el (gnus-summary-mail-forward): Fix typos in description.

2000-12-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* gnus-msg.el (gnus-group-posting-charset-alist): No longer allow
	raw 8-bit in headers in dk.* newsgroups.

2000-11-30  Dave Love  <fx@gnu.org>

	* message.el (message-auto-save-directory): Use
	file-name-as-directory.
	(message-set-auto-save-file-name): Create
	message-auto-save-directory if necessary.