@@ -1,3 +1,8 @@
+2000-12-15  ShengHuo ZHU  <zsh@cs.rochester.edu>
+
+	* pop3.el (pop3-movemail): Use binary.
+	(pop3-movemail-file-coding-system): Removed.
+
 2000-12-13  Miles Bader  <miles@gnu.org>
 
 	* smiley-ems.el (smiley-region): Bind `inhibit-point-motion-hooks'
